<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etColNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_collegue_nom"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/etColPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_collegue_prenom"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"
        android:autofillHints="personGivenName"/>

    <EditText
        android:id="@+id/etColTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_collegue_tel"
        android:inputType="phone"
        android:autofillHints="phone"/>

</LinearLayout>
